--- a/app/composer.json
+++ b/app/composer.json
@@ -20,7 +20,7 @@
 	"require": {
 		"php": ">=5.3.0",
 		"ext-mcrypt": "*",
-		"cakephp/cakephp": "~2.9",
+		"cakephp/cakephp": "3.1.5",
 		"firebase/php-jwt": "6.0.0"
 	},
 	"require-dev": {
